feat(core): refactor command execution handling and introduce new message structures
- Renamed `submitCommand` to `submitCommandWithResultHandle` in App and Engine classes for clarity.
- Introduced `DefaultCommandExecutionHandle` to manage command execution results.
- Updated various classes to utilize the new command submission and result handling methods.
- Enhanced message structures to include `toolCallContext` for better context management in commands and responses.
- Removed deprecated classes and methods to streamline the codebase.